# HistoryProject-Interbellum-card-game-

./: CMakeLists.txt  main.cpp
resources/: cards.json
src/: main.cpp
